[tool.poetry]
name = "pytemplate"
version = "0.0.1"
description = "template for a python repo with static analyzers and CI pipelines"
authors = ["areeh <arehaartveit@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/areeh/py-template"
exclude = ["tests/", "examples/"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.7.9"
flake8-mypy = "^17.8.0"
flake8-black = "^0.1.1"
flake8-bugbear = "^20.1.4"
pre-commit = "^2.0.1"


[tool.black]
line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
force_single_line = true
known_first_party = ["pytemplate", ]
default_section = "THIRDPARTY"